--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 :root{
+ 
   --primary1 : #282C6C;
   --primary2 : #171b5b;
+  --error1: #D32F2F;
+  --error2: #d61d1d;
 
+}
+*{
+  font-family: "Roboto", sans-serif;
+}
+input{
+  border: 2px solid rgb(145, 144, 144);
+  border-radius: 5px;
+  line-height: 2.5rem;
+  padding: 0rem 1rem;
+ 
+}
+input:focus{
+  outline: none;
+  border: 2px solid var(--primary1);
+}
+
+.inputData{
+  display: flex;
+  flex-direction: column;
+  row-gap: .3rem;
 }
 .css-sj612a{
   border:  none !important;
@@ -66,4 +90,30 @@
 .no-scrollbar {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+}
+
+select{
+  border: 2px solid rgb(145, 144, 144);
+  border-radius: 5px;
+  line-height: 2.5rem;
+  height: 2.6rem;
+  padding: 0rem 1rem;
+}
+select>option{
+  padding: 0 1rem;
+}
+select:focus{
+  border: 2px solid var(--primary1);
+}
+
+textarea{
+  border: 2px solid rgb(145, 144, 144);
+  border-radius: 5px;
+  padding: .7rem 1rem;
+  resize: none;
+}
+textarea:focus{
+  outline: none;
+  border: 2px solid var(--primary1);
+  
 }
